fixed spacing

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -407,7 +407,7 @@ body {
 	height: 100%;
 	width: 100%;
 	margin-top: 100px;
-	margin-bottom: 200px;
+	margin-bottom: 100px;
 }
 
 .testimonials {
@@ -415,19 +415,10 @@ body {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover; */
-	padding-top: 100px;
-	padding-bottom: 100px;
-	/* background: rgba(0, 0, 0, 0.1); */
+	padding-top: 80px;
+	padding-bottom: 80px;
 	border-top: solid 2px #eaeaea;
 	border-bottom: solid 2px #eaeaea;
-}
-
-.contact {
-	text-align: center;
-	height: 100%;
-	width: 100%;
-	margin-top: 100px;
-	margin-bottom: 200px;
 }
 
 .me2 {
